fix breaking CSS styles on mobile

--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -1,14 +1,19 @@
+.Footer__Wrap {
+  margin: auto;
+  width: 80%;
+}
+
 .Footer {
   margin: 8em 0;
   font-size: 0.8em;
-  padding: 0 24em;
-  text-align: center;
+  // padding: 0 24em;
+  // text-align: center;
   background-color: white;
   left: 0;
   bottom: 0;
   width: 100%;
   color: white;
-  flex-shrink: 0;
+  // flex-shrink: 0;
 
   @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
     font-size: 0.2em;
@@ -24,4 +29,5 @@
 .Social__buttons {
   display: flex;
   justify-content: space-around;
+  margin: 0 2em;
 }
